--- a/data/musicbrainz_dialog.ui
+++ b/data/musicbrainz_dialog.ui
@@ -1,5 +1,10 @@
 <interface domain="easytag">
     <requires lib="gtk+" version="3.4"/>
+    <object class="GtkListStore" id="results_model">
+        <columns>
+            <column type="gchararray"/>
+        </columns>
+    </object>
     <object class="GtkGrid" id="musicbrainz_grid">
         <property name="column-spacing">6</property>
         <property name="row-spacing">6</property>
@@ -96,7 +101,19 @@
                 <property name="visible">True</property>
                 <child>
                     <object class="GtkTreeView" id="results_view">
+                        <property name="model">results_model</property>
                         <property name="visible">True</property>
+                        <child>
+                            <object class="GtkTreeViewColumn" id="name_column">
+                                <property name="title" translatable="yes">Name</property>
+                                <child>
+                                    <object class="GtkCellRendererText" id="name_renderer"/>
+                                    <attributes>
+                                        <attribute name="text">0</attribute>
+                                    </attributes>
+                                </child>
+                            </object>
+                        </child>
                     </object>
                 </child>
             </object>
