Use resource property on GtkImage
Added in GTK+ 3.8.

--- a/data/toolbar.ui
+++ b/data/toolbar.ui
@@ -1,4 +1,12 @@
 <interface domain="easytag">
+    <object class="GtkImage" id="artist_view_image">
+        <property name="resource">/org/gnome/EasyTAG/images/artist.png</property>
+        <property name="visible">True</property>
+    </object>
+    <object class="GtkImage" id="invert_selection_image">
+        <property name="resource">/org/gnome/EasyTAG/images/invert-selection.png</property>
+        <property name="visible">True</property>
+    </object>
     <object class="GtkToolbar" id="main_toolbar">
         <property name="visible">True</property>
         <style>
@@ -106,7 +114,7 @@
                 <property name="action-name">win.file-artist-view</property>
                 <property name="action-target">'artist'</property>
                 <property name="label" translatable="yes">Artists and Albums</property>
-                <!--<property name="icon-widget">artist_view_image</property>-->
+                <property name="icon-widget">artist_view_image</property>
                 <property name="tooltip-text" translatable="yes">Browse artists and albums</property>
                 <property name="visible">True</property>
             </object>
@@ -118,7 +126,7 @@
             <object class="GtkToolButton" id="invert_selection_button">
                 <property name="action-name">win.invert-selection</property>
                 <property name="label" translatable="yes">Invert File Selection</property>
-                <!--<property name="stock-id">easytag-invert-selection</property>-->
+                <property name="icon-widget">invert_selection_image</property>
                 <property name="tooltip-text" translatable="yes">Invert file selection</property>
                 <property name="visible">True</property>
             </object>
